# visualTriangulation

./: CMakeLists.txt  clean_build.sh  run_build.sh  run_detection.sh
include/: hello.h
include/camera_unit/: camera_unit.h
include/tri_manager/: tri_manager.h
include/visualization/: visualization.h
src/: CMakeLists.txt
src/camera_unit/: CMakeLists.txt  camera_unit.cpp
src/detection/: CMakeLists.txt  XYWD.cpp  detection.cpp
src/main/: CMakeLists.txt  main.cpp
src/tri_manager/: CMakeLists.txt  tri_manager.cpp
src/util/: CMakeLists.txt  hello.c  hello.cpp
src/visualization/: CMakeLists.txt  visualization.cpp
