SET(EXECUTABLE_OUTPUT_PATH ${BWMT_SOURCE_DIR}/bin)	# 设置输出执行文件的目录
add_definitions("-std=c++11")
SET(SRC_LIST main.cpp)

INCLUDE_DIRECTORIES(${BWMT_SOURCE_DIR}/include)

LINK_DIRECTORIES(${BWMT_SOURCE_DIR}/lib)

ADD_EXECUTABLE(main ${SRC_LIST})

find_package(PCL REQUIRED)
INCLUDE_DIRECTORIES(${PCL_INCLUDE_DIRS})
LINK_DIRECTORIES(${PCL_LIBRARIES_DIRS})

TARGET_LINK_LIBRARIES(main tri_manager camera_unit visualization glog ${PCL_LIBRARIES})
